crates/compiler/semantic/tests/snapshots/diagnostics__control_flow::loop_type_checking::test_while_loop_with_nested_conditions.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: control_flow::loop_type_checking::test_while_loop_with_nested_conditions"
---
Fixture: semantic_tests::control_flow::loop_type_checking::test_while_loop_with_nested_conditions
============================================================
Source code:

        fn test() {
            let a: felt = 1;
            let b: felt = 0;

            while (a) {
                while (b) {
                    return;
                }
                return;
            }
            return;
        }
        
============================================================
Found 2 diagnostic(s):

--- Diagnostic 1 ---
[2001] Error: While loop condition must be of type 'bool', found 'felt'
   ╭─[ semantic_tests::control_flow::loop_type_checking::test_while_loop_with_nested_conditions:6:20 ]
   │
 6 │             while (a) {
   │                    ┬  
   │                    ╰── While loop condition must be of type 'bool', found 'felt'
───╯

--- Diagnostic 2 ---
[2001] Error: While loop condition must be of type 'bool', found 'felt'
   ╭─[ semantic_tests::control_flow::loop_type_checking::test_while_loop_with_nested_conditions:7:24 ]
   │
 7 │                 while (b) {
   │                        ┬  
   │                        ╰── While loop condition must be of type 'bool', found 'felt'
───╯
