crates/compiler/semantic/tests/snapshots/diagnostics__control_flow::loop_type_checking::test_while_loop_with_tuple_condition.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: control_flow::loop_type_checking::test_while_loop_with_tuple_condition"
---
Fixture: semantic_tests::control_flow::loop_type_checking::test_while_loop_with_tuple_condition
============================================================
Source code:

        fn test() {
            let t: (felt, felt) = (1, 2);
            while (t) {
                return;
            }
        }
        
============================================================
Found 2 diagnostic(s):

--- Diagnostic 1 ---
[2001] Error: While loop condition must be of type felt, found '(felt, felt)'
   ╭─[ semantic_tests::control_flow::loop_type_checking::test_while_loop_with_tuple_condition:4:20 ]
   │
 4 │             while (t) {
   │                    ┬  
   │                    ╰── While loop condition must be of type felt, found '(felt, felt)'
───╯

--- Diagnostic 2 ---
[3002] Error: Function 'test' doesn't return on all paths
   ╭─[ semantic_tests::control_flow::loop_type_checking::test_while_loop_with_tuple_condition:2:12 ]
   │
 2 │         fn test() {
   │            ──┬─  
   │              ╰─── Function 'test' doesn't return on all paths
───╯
