crates/compiler/semantic/tests/snapshots/diagnostics__control_flow::loop_unreachable::test_code_after_break.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: control_flow::loop_unreachable::test_code_after_break"
---
Fixture: semantic_tests::control_flow::loop_unreachable::test_code_after_break
============================================================
Source code:

        func test() {
            loop {
                break;
                let x = 1;  // Unreachable
            }
            return;
        }
        
============================================================
Found 1 diagnostic(s):

--- Diagnostic 1 ---
[3001] Warning: Unreachable variable declaration
   ╭─[ semantic_tests::control_flow::loop_unreachable::test_code_after_break:5:17 ]
   │
 5 │                 let x = 1;  // Unreachable
   │                 ─────┬────  
   │                      ╰────── Unreachable variable declaration
───╯
