crates/compiler/semantic/tests/snapshots/diagnostics__control_flow::loop_validation::test_break_outside_loop.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: control_flow::loop_validation::test_break_outside_loop"
---
Fixture: semantic_tests::control_flow::loop_validation::test_break_outside_loop
============================================================
Source code:

        func test() {
            break;
            return;
        }
        
============================================================
Found 1 diagnostic(s):

--- Diagnostic 1 ---
[3003] Error: Break statement outside of loop
   ╭─[ semantic_tests::control_flow::loop_validation::test_break_outside_loop:3:13 ]
   │
 3 │             break;
   │             ───┬──  
   │                ╰──── Break statement outside of loop
───╯
